--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,17 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+My long two-pointed ladder's sticking through a tree  
+Toward heaven still,  
+And there's a barrel that I didn't fill  
+Beside it, and there may be two or three  
+Apples I didn't pick upon some bough.  
+But I am done with apple-picking now.  
+Essence of winter sleep is on the night,  
+The scent of apples: I am drowsing off.  
+I cannot rub the strangeness from my sight  
+I got from looking through a pane of glass  
+I skimmed this morning from the drinking trough  
+And held against the world of hoary grass.  
+It melted, and I let it fall and break.  
+But I was well  
