--- a/poem.rmd
+++ b/poem.rmd
@@ -24,10 +24,28 @@ How cheerfully he seems to grin,
   
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
-
+The city had withdrawn into itself  
+And left at last the country to the country;  
+When between whirls of snow not come to lie  
+And whirls of foliage not yet laid, there drove  
+A stranger to our yard, who looked the city,  
+  
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
-
+"The sun was shining on the sea,  
+      Shining with all his might:  
+He did his very best to make  
+      The billows smooth and bright —  
+And this was odd, because it was  
+      The middle of the night.  
+  
+The moon was shining sulkily,  
+      Because she thought the sun  
+Had got no business to be there  
+      After the day was done —  
+"It's very rude of him," she said,  
+      "To come and spoil the fun."  
+        
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
 My long two-pointed ladder's sticking through a tree  
